FIXED Seasonal Selection overflow by titling page Designs instead

--- a/styles.css
+++ b/styles.css
@@ -129,13 +129,13 @@ COLOR SCHEME
 
 h1 {
     display: flex;
-    margin: 5%;
+    margin: 5% 2%;
     font-family: "audiowide";
     letter-spacing: 1vw;
     font-weight: 600;
     border-radius: 30px;;
     box-shadow: 3px 3px 1px 0px #328d94;
-    padding: 3% 3%;
+    padding: 1vh 3%;
     justify-content: center;
 
 }
